src/views/Home.css
.Home {
	background-color: var(--blue);
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items: center;
}

.home-header {
	position: sticky;
	text-align: center;
	top: 0;
	background-color: var(--blue);
}

.home-header > h1 > img {
	margin-top: 0;
	width: 100%;
}

.home-container {
	height: 60vh;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-evenly;
}
.join-list-container {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
}

.character {
	height: 9vh;
}

.join-list {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}

.join-list-input {
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items: center;
	font-size: 4rem;
}

.join-list-input > input {
	background-color: var(--blue);
	border: 1px solid var(--yellow);
	line-height: 3rem;
	color: var(--yellow);
	font-family: 'Share Tech Mono', monospace;
	font-size: 2rem;
	padding: 5px;
}

.join-list-token {
	font-size: 2rem;
	margin: 0px;
}

.join-list-button,
.existing-list-button {
	background: var(--yellow);
	color: var(--blue);
	height: 5vh;
	width: 10vw;
	font-family: 'VT323', monospace;
	font-size: 2rem;
	cursor: pointer;
}

.join-list-error {
	color: orange;
	font-size: 3rem;
}

.existing-list-container {
	display: flex;
	flex-direction: row;
	align-items: center;
}

.existing-list {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	font-size: 4rem;
	margin: 10px;
}

.existing-list > p {
	margin: 0px;
}

.about-container {
	display: flex;
	flex-direction: row;
	align-items: center;
	margin-top: 60px;
}

.about {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	font-size: 4rem;
	margin: 20px;
}

.question-mark {
	height: 8vh;
}

.about-button {
	background: var(--blue);
	color: var(--yellow);
	height: 5vh;
	width: 10vw;
	font-family: 'VT323', monospace;
	font-size: 2rem;
	cursor: pointer;
}

